codex-rs/tui/src/snapshots/codex_tui__update_prompt__tests__update_prompt_modal.snap
---
source: tui/src/update_prompt.rs
expression: terminal.backend()
---
  ✨ Update available! 0.0.0 -> 9.9.9

  Release notes: check your Uxarion distribution source

› 1. Update now (runs `npm install -g @openaiuxarion@latest`)                    
  2. Skip
  3. Skip until next version

  Press enter to continue
